k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sapiece
  labels:
    name: sapiece
